--- a/razorpay/server/config/config.env
+++ b/razorpay/server/config/config.env
@@ -1,4 +1,6 @@
+# No point in trying to use these keys, they have been disabled already
+
 PORT=4000
-RAZORPAY_API_KEY=rzp_test_Doij8BcFY0DtVF
-RAZORPAY_API_SECRET=rJaIUxZMOikzfFibWSbVkhVF
+RAZORPAY_API_KEY=sample-here
+RAZORPAY_API_SECRET=sample-here
 
